# wafflecli

./: Cargo.toml  README.md
src/: main.rs  tools.rs
src/app/: app.rs
src/llm/: mod.rs  request_llm.rs
src/router/: mod.rs  route.rs  router.rs  screen.rs
src/ui/: logo.rs  mod.rs  ui.rs
src/views/: main_view.rs
