[package]
name = "wafflecli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
indoc = "2.0.7"
ratatui = "0.30.0"
reqwest = {version = "0.13.2", features = ["json"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["full"] }
tui-input = "0.15.1"
